<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D84315"
    tools:context=".acerca">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/acercade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="30dp"
                android:drawableRight="@drawable/carroa"
                android:text="@string/acercade"
                android:textAlignment="center"
                android:textColor="#8BBD68"
                android:textSize="27sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/descripcionacercade"
                android:layout_width="349dp"
                android:layout_height="277dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="25dp"
                android:text="@string/descripcionacercade"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />
        </TableRow>


        <TableRow
            android:layout_width="232dp"
            android:layout_height="164dp"
            android:background="#FFFFFF">

            <TextView
                android:id="@+id/footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:text="Sobre la App"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="21sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <TextView
                android:id="@+id/android"
                android:layout_width="346dp"
                android:layout_height="35dp"
                android:layout_marginLeft="30dp"
                android:text="@string/android"
                android:textAlignment="center"
                android:textColor="#252424" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">


            <TextView
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="2dp"
                android:text="Version 1.0.0"
                android:textAlignment="center"
                android:textColor="#283593"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <TextView
                android:id="@+id/derechos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="1dp"
                android:text="@string/derechos"
                android:textAlignment="center"
                android:textColor="#181616" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                app:srcCompat="@drawable/notification" />

        </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF">


                    <TextView
                        android:id="@+id/link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="1dp"
                        android:onClick="acepto"
                        android:text="@string/link"
                        android:textAlignment="center"
                        android:textColor="#283593" />

                </TableRow>



    </TableLayout>

</RelativeLayout>

